buildscript {
  repositories {
    mavenCentral()
    jcenter()
  }

  dependencies {
    classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'

  }
}

apply plugin: 'java'
apply plugin: 'com.github.johnrengelman.shadow'

allprojects {
  apply plugin: 'java'
  sourceCompatibility = 1.8
  targetCompatibility = 1.8
}

repositories {
  mavenCentral()
}

jar {
  manifest {
    attributes 'Main-Class': 'com.clouway.App'
  }
}

shadowJar {
  baseName = 'webapp'
  exclude 'META-INF/*.DSA'
  exclude 'META-INF/*.RSA'
}

dependencies {
  compile 'com.google.inject:guice:3.0'
  compile 'com.google.inject.extensions:guice-multibindings:3.0'
  compile 'com.google.inject.extensions:guice-servlet:3.0'
  compile 'com.google.guava:guava:19.0'
  compile 'com.google.sitebricks:sitebricks:0.8.11'
  
  compile 'org.eclipse.jetty:jetty-server:8.1.8.v20121106'
  compile 'org.eclipse.jetty:jetty-servlet:8.1.8.v20121106'
  compile 'javax.servlet:javax.servlet-api:3.1.0'

  compile 'org.slf4j:slf4j-api:1.6.3'
  compile 'ch.qos.logback:logback-classic:0.9.30'


  testCompile 'junit:junit:4.11', 'org.jmock:jmock:2.6.0', 'org.jmock:jmock-junit4:2.8.2'
}


test {
  // set heap size for the test JVM(s)
  minHeapSize = '2g'
  maxHeapSize = '4g'

  jvmArgs "-XX:MaxPermSize=1g"
}


